word-comma-word check

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -3,7 +3,7 @@ The theoretical section of this thesis aims to present an accessible introductio
 
 This phenomenon is common in optics, but in homogeneous materials it is usually negligible. When the electrodynamics of periodic structures is concerned, the spatial dispersion is often particularly pronounced and should not be neglected. More general shapes of the dispersion curves in spatially-dispersive media are illustrated in several figures. 
 
-The dispersion curves are also shown to become periodic with regard to the wavevector, which is a result of the Bloch theorem; the chapter further introduces the concepts of isofrequency contours, Brillouin zones and high-symmetry points in the reciprocal space, and discusses the conditions under which the notions of group, phase and information velocity are applicable.
+The dispersion curves are also shown to become periodic with regard to the wavevector, which is a result of the Bloch's theorem; the chapter further introduces the concepts of isofrequency contours, Brillouin zones and high-symmetry points in the reciprocal space, and discusses the conditions under which the notions of group, phase and information velocity are applicable.
 
 Nowadays, perhaps more than ever earlier, it is important to maintain an outlook over the history of the rapid scientific development. A  historical review follows which traces back the origin of numerous concepts much earlier than the majority of metamaterial-related papers advertise. % The analysis of how atomic lattices should be treated as homogeneous media puzzled physicists over a century ago, and the synthesis of inhomogeneous structures with desired macroscopic \textit{homogenized} behaviour is not much younger than the microwave technology on its own.
 The historical part promotes the author's view on the notions of \textit{artificial dielectrics} and \textit{negative-index media}, which appear to have developed independently, to be unified around the middle of twentieth century. In a similar manner, it is argued that the resulting paradigm of \textit{negative-index metamaterials} unified with the concept of \textit{photonic crystals} around the millennium. The process of unification always sheds new light on the physical interpretation and is beneficial for conceptual development of the field. The historical review is a basis for outlining the boundary between metamaterials and photonic crystals, which concludes the theoretical section.
@@ -56,7 +56,7 @@ The Results chapter presents an overview of the electromagnetic behaviour of ten
 \item{Finally, we show that the extraordinary transmission mediates the propagation of waves also in fishnet metamaterials which are made of stacked perforated metallic sheets. Current-driven homogenization plots for three different fishnets are compared to the scattering-parameter method, revealing  that the latter is hardly applicable to this kind of structures, due to strong near-field coupling between neighbouring cells. Fishnets also support additional waves carried by quadrupole resonances, which was also observed in terahertz spectra of samples manufactured in our laboratory. Nevertheless, the simulations predict that under a careful choice of geometry and illumination, fishnets exhibit a band of negative refractive index. 
 }
 \end{enumerate}
-There remain many topics that are related to the focus of thesis, but were not discussed here, such as other crystal families than the square/cubic one, possibly including also quasicrystals or disorder. Except for the fishnet samples, the discussion was restricted to structures sharing symmetries with the incoming fields; more general classes of structures would involve bianisotropy/chirality. Also the nonlinear response of all structures can be studied, but one has to be aware that the Bloch theorem and most of the presented theory assumes strictly linear response. However, direct numerical simulations of these phenomena can be presumably  achieved with a relatively easy adaptation of the simulation scripts.
+There remain many topics that are related to the focus of thesis, but were not discussed here, such as other crystal families than the square/cubic one, possibly including also quasicrystals or disorder. Except for the fishnet samples, the discussion was restricted to structures sharing symmetries with the incoming fields; more general classes of structures would involve bianisotropy/chirality. Also the nonlinear response of all structures can be studied, but one has to be aware that the Bloch's theorem and most of the presented theory assumes strictly linear response. However, direct numerical simulations of these phenomena can be presumably  achieved with a relatively easy adaptation of the simulation scripts.
 
 Another particularly useful direction of research would consist in adding the support of gyrotropy into the MEEP library, i.e. non-hermitian form of the permittivity or permeability tensors which breaks the time-reversal symmetry. This would open wide research possibilities of linear metamaterial devices with pronounced non-reciprocal effects.
 
@@ -73,7 +73,7 @@ When a scientific method is used beyond its scope, sometimes it leads to mathema
 %		although often mentioned as such \cite{mortensen2010unambiguous}, the ambiguity of retrieved refractive index does not 
 %		present a big issue compared to more fundamental limitations of the s-parameter method
 
-Finally, even when the scattering parameter method yields physically sound index of refraction, it does not guarantee that the retrieved effective impedance $\Zeff$ is valid nor that the medium may described by means of the effective local permittivity $\eeff$ and permeability $\meff$. These effective parameters require the unit cell be much smaller than the Bloch wavelength. In most metamaterials, this condition is fulfilled in one or few narrow portions of the spectrum only, namely where $|\Neff'| \ll c/(2af)$. Otherwise the spectra of $\eeff$ or $\meff$ acquire typical antiresonance artifacts, which have incited disputes stretching over several papers (starting with Ref. \cite{koschny2003resonant}). We argumented that the Landau-Lifshitz form of permittivity $\epsLL(\omega,\KK)$ is required to fully account for the spatial dispersion. 
+Finally, even when the scattering parameter method yields physically sound index of refraction, it does not guarantee that the retrieved effective impedance $\Zeff$ is valid nor that the medium may described by means of the effective local permittivity $\eeff$ and permeability $\meff$. These effective parameters require the unit cell be much smaller than the Bloch's wavelength. In most metamaterials, this condition is fulfilled in one or few narrow portions of the spectrum only, namely where $|\Neff'| \ll c/(2af)$. Otherwise the spectra of $\eeff$ or $\meff$ acquire typical antiresonance artifacts, which have incited disputes stretching over several papers (starting with Ref. \cite{koschny2003resonant}). We argumented that the Landau-Lifshitz form of permittivity $\epsLL(\omega,\KK)$ is required to fully account for the spatial dispersion. 
 %	- some of them have Neff<0, but the regions of applicability for eeff nor meff is much more restricted 
 %		to regions of |Neff'|~0, since as argued earlier, the local effective parameters of $\eeff$ and $\meff$ do not have enough degrees of freedom to express the (longitudinal) spatial dispersion; i.e. the effect of the fields varying significantly within one unit cell.
 
@@ -91,7 +91,7 @@ Let us note that implications opposite to these shown may not hold, either.  For
 
 % Excessive spatial dispersion in known structures, with regard to the longitudinal changes in the wavevector (i.e. in the wavenumber); i.e. the eff-param spectra often 'stick' to the BZ boundary. Without this interpretation, various papers fail to explain the typical "antiresonance" in effective parameters, that seems to cause confusion. http://onlinelibrary.wiley.com/doi/10.1002/adma.201502298/full etc.)
 
-%  * the RESULTS section has shown that for the idealized lattice of resonant elements, denoted as a Bloch lattice in \ref{simovski2007bloch}, the spectra of effective index of refraction would have a form of alternating photonic bands, with always growing Neff(f), and photonic band gaps, where $Neff'(f)$ follows a Brillouin zone boundary, except for well-defined individual resonances of the electric or magnetic dipole. The results have, nonetheless, also proven that this interpretation is only approximate, due to evanescent inter-cell coupling and the resulting spatial dispersion. In particular, some structures made of metal preclude to use the $Neff'(f)$
+%  * the RESULTS section has shown that for the idealized lattice of resonant elements, denoted as a Bloch's lattice in \ref{simovski2007bloch}, the spectra of effective index of refraction would have a form of alternating photonic bands, with always growing Neff(f), and photonic band gaps, where $Neff'(f)$ follows a Brillouin zone boundary, except for well-defined individual resonances of the electric or magnetic dipole. The results have, nonetheless, also proven that this interpretation is only approximate, due to evanescent inter-cell coupling and the resulting spatial dispersion. In particular, some structures made of metal preclude to use the $Neff'(f)$
 
 %\paragraph{What the thesis does not contain} 
 \paragraph{Closing words} 
