--- a/fdphd.bib
+++ b/fdphd.bib
@@ -56,10 +56,6 @@
   note = {Poster},
 }
 
-
-% YEAR={2014},
-% note={()},
-
 %/*}}}*/
 % ---- as co-author ---- %/*{{{*/
 % April 24–27 (2012) 
@@ -232,7 +228,7 @@ Near-field spectroscopy of sub-wavelength (<λ/10) anisotropic dielectric resona
   school={Charles University, Prague}
 }
 @phdthesis{skoromets2013phd,
-  title={Tunable Mater. Struct. for terahertz spectral range},
+  title={Tunable materials and structures for terahertz spectral range},
   author={Skoromets, Volodymyr},
   year={2013},
   school={Charles University, Prague}
@@ -2061,7 +2057,7 @@ lts.fzu.cz/pdf/d-js.pdf
 }
 @misc{dominec2014_imagej,
 	author = {Dominec, Filip},
-	title = {Calculating size distribution of powder particles using Image (IN)J, \textit{http://f.dominec.eu/granulo/index.html}, Last visited {A}pril 2015},
+	title = {Calculating size distribution of powder particles using ImageJ, \textit{http://f.dominec.eu/granulo/index.html}, Last visited {A}pril 2015},
 	howpublished ={Online},
 }
 
@@ -2097,7 +2093,7 @@ lts.fzu.cz/pdf/d-js.pdf
 }
 -- other non-simulation --
 @article{abramoff2004image,
-  title={Image (IN) processing with Image (IN)J},
+  title={Image processing with ImageJ},
   author={Abr{\`a}moff, Michael D and Magalh{\~a}es, Paulo J and Ram, Sunanda J},
   journal={Biophotonics international},
   volume={11},
