--- a/thztech.tex
+++ b/thztech.tex
@@ -35,7 +35,7 @@ As a solution, either substantial changes in the device geometry, constituent ma
  %devices where the wavelength is not determined by quantum phenomena, or by physical quantity other than dimension (such as the magnetic field strength in a magnetron tube).
 
 If a relatively low power is required, principles used in microwave engineering can be extended to the lower part of the terahertz spectrum.  %% TODO stylistics
-The frequency range of operation of high-electron-mobility transistors (HEMT) has been extended in this way up to 1 THz. %Sometimes all accompanying components are integrated to a MMIC.
+The frequency range of operation of high electron mobility transistors (HEMT) has been extended in this way up to 1 THz. %Sometimes all accompanying components are integrated to a MMIC.
 
 An oscillator may be formed by placing an element with a negative differential resistance (NDR) into a resonant cavity or circuit. 
 In \textit{Gunn diodes}, widely used in microwave technology, the NDR is due to the electron's effective mass abruptly increasing with their velocity in certain direct-gap semiconductors.
