--- a/theory.tex
+++ b/theory.tex
@@ -65,7 +65,7 @@ Rewriting it explicitly, in this thesis we define the \textit{wavefront projecti
 	\end{array} \right) 
 \text{ or equivalently, }
 (\TT)_{ij} = - \frac{k_i k_j}{k^2} + \delta_{ij} .  \label{eq_transverse2}\end{equation}
-The solutions of Eq. (\ref{eq_wavek}) for a harmonic plane wave in vacuum can be divided into two groups: % TODO add reference that there is no other oslutino
+The solutions of Eq. (\ref{eq_wavek}) for a harmonic plane wave in vacuum can be divided into two groups: 
 \begin{enumerate}
  \item{\textit{Transverse electromagnetic waves}, with the electric field and wave vector being perpendicular, i.e. $(\kk \cdot \E) = 0$ and thus $\TT\E = \E$. Therefore, the \textit{dispersion relation}\index{dispersion!in vacuum} for a transverse plane wave in vacuum is linear:
 \begin{equation} k~= \sqrt{\mu_0 \varepsilon_0}\; \omega = \frac{\omega}{c}, \label{eq_dispeq_vac}\end{equation}
@@ -136,10 +136,7 @@ One can see that each oscillator increases the real part of the low-frequency pe
 
 The contribution of one oscillator to the low-frequency permittivity $\Delta\epsrl(0)$, is inversely proportional to the oscillator restoring force, which links it to the inverse square of the resonance frequency:
 \begin{equation} \Delta \epsrl'(\omega\rightarrow0) = \frac{F}{\omega_0^{2}}.  \label{eq_delta_eps} \end{equation}
-
 A more detailed treatment of the permittivity spectra $\epsrl(\omega)$ may be found in many textbooks, e.g. \cite[p. 454]{klingshirn2007semiconductor}, \cite{dresselhaus1966optical}. 
-%TODO add that putting two resonances of the same type near to each other annihilates their “wings”
-%TODO ==> hard to make a broadband-operating passive MM
 
 We will return to the Lorentz oscillator model also in the Chapter \ref{def_of_mat}, where it appears to be essential for realistic definition of materials for accurate numerical simulations. The chapter also describes how a \textit{Debye relaxator}\index{Debye relaxator} (e.g. from overdamped molecular rotation) and the \textit{Drude term}\textit{Drude term} (from unbound motion of free charges) can be represented using correct parameters of an oscillator.
 %}}}
@@ -327,7 +324,7 @@ Moreover, in every single photonic band, Eq. (\ref{eq_dispdet}) yields two solut
 
 \begin{figure}[ht] \caption{Isofrequency contours for three different frequencies: \textbf{(a)} IFCs in the isotropic medium are circular and centered in the $k=0$ point. \textbf{(b)} An anisotropic medium with the optical axis perpendicular to the interface, where IFCs take the form of ellipses. \textbf{(c)} A similar case of another anisotropic medium, with the orientation of the optical axis (drawn as the dashed black line) that warrants introducing the index of refraction for the shown direction of the wave vector $\kk$. Note that for clarity, the plots (b) and (c) show the IFCs only for one wave polarisation. %%% XXX XXX XXX todo what is the orientation of the group velocity??
 %% FIXME \textbf{(d)} A dispersive \textit{hyperbolic medium}\index{hyperbolic medium}, with one component being a function of frequency and crossing zero.
-} \label{fg_ifc} \centering  %% TODO verify in Belov that local media may be used as hyperbolic
+} \label{fg_ifc} \centering
 	\includegraphics[width=.8\textwidth]{img/ifc_freqdispersion.pdf} 
 \end{figure}
 IFCs are valuable for graphical prediction of wave refraction on interface of two media \cite[p. 118]{shalaev2010book}, \cite{boardman2005negative}. Starting, e.g., by an isotropic medium in Fig. \ref{fg_ifc}a, the wavevectors are known for given frequencies (as three coloured arrows).
@@ -371,9 +368,9 @@ Temporal modulation of the wave
 is equivalent to the wave being formed by superposition of multiple frequency components in the frequency domain, with their respective amplitudes given by the Fourier transform of the field envelope. The temporal position of the envelope in is determined by their \textit{mutual phase difference}, not by the absolute wave phase. 
 %redund As a special case, when all components propagate with the same velocity, the envelope does not shift against the wave phase. 
 
-A similar argument can be made with regard to the spatial modulation of the wave. Any wave shape other than the infinite plane wave is a superposition of waves with different wavevectors, and the direction of propagation of its spatial envelope is given by mutual phase difference of the constituent waves. % TODO rewrite-unclear
+A similar argument can be made with regard to the spatial modulation of the wave. Any wave shape other than the infinite plane wave can be expanded into a superposition of waves with different wavevectors, and the direction of propagation of its spatial envelope is given by mutual phase difference of the constituent waves. %
 
-The velocity vector of the envelope propagation, denoted as the \textit{group velocity}\index{velocity!group v.} $\vg$, can be found as the gradient of frequency by the wavevector: %% TODO cite
+The velocity vector of the envelope propagation, denoted as the \textit{group velocity}\index{velocity!group v.} $\vg$, can be found \cite{mikki2009electromagnetic} as the gradient of frequency by the wavevector: 
 \begin{equation} \vg := \frac{\partial \omega}{\partial \kk} \equiv 
 \left(\begin{array}{c} 
 	\partial \omega/\partial k_x \\ 
@@ -420,7 +417,7 @@ In the discussion of refraction both in Fig. \ref{fg_ifc} and \ref{fg_ifc2}, the
 
 A more complicated case occurs when the wave vector $\kk$ and group velocity $\vg$ point in opposite directions (or, more generally, when they have opposite projections on the normal to the interface).  This manifests itself by the IFC radius \textit{decreasing} with frequency growing, as shown in  Fig. \ref{fg_ifcnr}b,c.
 Such a case can indeed occur in natural or artificial media, as described in more detail below. 
-\begin{figure}[ht] \caption{Frequency-dependent IFCs of \textbf{(a)} an ordinary medium, \textbf{(b)} an isotropic medium with a negative index of refraction and \textbf{(c)} an anisotropic medium with a negative index of refraction. } \label{fg_ifcnr} \centering  %% TODO  WRITE
+\begin{figure}[ht] \caption{Frequency-dependent IFCs of \textbf{(a)} an ordinary medium, \textbf{(b)} an isotropic medium with a negative index of refraction and \textbf{(c)} an anisotropic medium with a negative index of refraction. } \label{fg_ifcnr} \centering  %% TODO comment?
 	\includegraphics[width=.9\textwidth]{img/ifc_negrefr.pdf} 
 \end{figure}
 \begin{figure}[ht] \caption{Wavevector-dependent IFCs for one frequency, for the same examples of media as in Fig. \ref{fg_ifcnr}. At an interface of ordinary medium \textbf{(a)} with an isotropic medium of opposite group and phase velocity \textbf{(b)}, both wavevector and beam direction refract under negative angle. The principle of refractive index can be applied to compute the wave vector of a wave propagating along the optical axis of anisotropic media \textbf{(c)}, but the beam refraction follows a different rule as discussed in the text.} \label{fg_ifcnrk} \centering  
@@ -548,8 +545,6 @@ where we make use of the wavefront projection tensor defined as
 Let us note that the classical approach using symmetric parameters $\epsrl(\omega,\kk),\murl(\omega,\kk)$, and the Landau-Lifshitz approach of gathering all medium-related effects in the permittivity $\epsLL(\omega,\kk)$ are only two examples of all possible gauge transformations of medium parameters under which the Maxwell equations are invariant. 
 
 Formally, one can distribute the medium electric and magnetic responses between these parameters arbitrarily -- the distribution weight may be even frequency dependent, leading to a physically realistic pair of parameters with custom spectral shape \cite{skaar2014diamagnetism}.
-% maybe "Casimir" formulation of electrodynamics \cite{vinogradov2002form}
-% TODO REF EBD theory and nonlocal electrodynamics %% \cite{krowne2007book_agran} %% \cite{landau1984electrodynamics} %% \cite{mikki2009electromagnetic}
 %}}}
 
 \subsection{Dispersion relations in nonlocal homogeneous media} 
@@ -566,7 +561,7 @@ An intrinsic issue of spatial-dispersive media is that the permittivity $\epsLL(
 	{\epsLL}_{12}(\omega,\kk) & {\epsLL}_{22}(\omega,\kk) & {\epsLL}_{32}(\omega,\kk)  \\
 	{\epsLL}_{13}(\omega,\kk) & {\epsLL}_{23}(\omega,\kk) & {\epsLL}_{33}(\omega,\kk)  
 	\end{array} \right) \right] = 0. \label{eq_dispdetLL}\end{equation}
-If all tensor elements, ${\epsLL}_{ij}(\omega,\kk)$, can be approximated in the form of a polynomial expansion to a low order in $\kk$, the solution can again be found as roots of a characteristic polynomial. The degree of this polynomial may be substantially higher than in Eq. (\ref{eq_dispdet}), the dispersion curves can nonetheless be found by a brutal-force numerical search. %% ?? for any ${\epsLL}_{ij}(\omega,\kk)$.
+If all tensor elements, ${\epsLL}_{ij}(\omega,\kk)$, can be approximated in the form of a polynomial expansion to a low order in $\kk$, the solution can again be found as roots of a characteristic polynomial. The degree of this polynomial may be substantially higher than in Eq. (\ref{eq_dispdet}), the dispersion curves can nonetheless be found by a brute-force numerical search. %% ?? for any ${\epsLL}_{ij}(\omega,\kk)$.
 \begin{figure}[t] \caption{Dispersion curves for three different types of local media, comparing the local and Landau-Lifshitz representations of constitutive parameters. Three rows show media with \textbf{(a)} a  resonance in permittivity, \textbf{(b)} in permeability, and \textbf{(c)} in both parameters simultaneously.\\
 Left column: Local parameters $\epsrl(\omega)$, $\murl(\omega)$ as functions of frequency. Right column: Dispersion curves were computed either with the local parameters from Eq. (\ref{eq_epsmusd2}), plotted as dashed green lines, or with the Landau-Lifshitz parameters from Eq. (\ref{eq_epsmusd3}), plotted as black line. The Landau-Lifshitz permittivity $\epsLL(\omega,\kk)$ is color shaded on the background. %% TODO make clearer?
 } \label{fg_dcll} \centering  
@@ -586,7 +581,7 @@ This is complemented by the Landau-Lifshitz permittivity $\epsLL(\omega, k)$ as 
 %As a confirmation of the compatibility of the Landau-Lifshitz model with the classical one,
 Additionally, the original green dashed dispersion curve as in Fig. \ref{fg_dcsimpleel} is retained, as computed using the classical approach based on the Eq. (\ref{eq_dispeq_loc}). It can thus be seen that both models always predict exactly the same dispersion.
 
-For a local isotropic medium with a single electric resonance in Fig. \ref{fg_dcll}a, the plotted curves are identical to Fig. \ref{fg_dcsimpleel}. On the right panel, the Landau-Lifshitz permittivity $\epsLL(\omega, k)$ follows a resonance curve in frequency, but is independent of the wavenumber $k$ (as long as the medium is local). With increasing frequency, the lower polariton branch bends towards higher $k$, as $\epsLL(\omega, k)$ increases towards the resonance at $\omega_0$, then a band of frequency follows where and no solution of the wave equation %% TODO REF
+For a local isotropic medium with a single electric resonance in Fig. \ref{fg_dcll}a, the plotted curves are identical to Fig. \ref{fg_dcsimpleel}. On the right panel, the Landau-Lifshitz permittivity $\epsLL(\omega, k)$ follows a resonance curve in frequency, but is independent of the wavenumber $k$ (as long as the medium is local). With increasing frequency, the lower polariton branch bends towards higher $k$, as $\epsLL(\omega, k)$ increases towards the resonance at $\omega_0$, then a band of frequency follows where and no solution of the wave equation \cite{klingshirn2007semiconductor}
 exists due to $\epsLL(\omega, k)$ being negative, and finally the upper polariton branch starts when $\epsLL(\omega, k)$ crosses zero and becomes positive again.
 
 A local medium with a single \textit{magnetic} resonance, Fig. \ref{fg_dcll}b, is predicted by the symmetric model to exhibit similar dispersion curves. In the right panel of Fig. \ref{fg_dcll}b, the magnetic resonance is represented by the
@@ -662,7 +657,7 @@ In the simplest case where the wave perpendicularly impinges a single interface 
 \begin{equation} r = \frac{Z_2 - Z_1}{Z_2+Z_1}, \quad t = \frac{2 Z_2}{Z_2 + Z_1}, \label{eq_reflection}\end{equation}
 
 %}}}
-\paragraph{Refraction on interface with a nonlocal medium}   %{{{ TODO
+\paragraph{Refraction on an interface with a nonlocal medium}   %{{{
 The task to compute the amplitudes of reflection and transmission for nonlocal media is substantially more complicated than for the local media. The principial reason is related to the fact that the definition of the medium response (\ref{eq_chi_convol_nonloc}) contains a convolution over an infinite space, which naturally does not account for the interface. For the problem to be better formulated, the integral would have to be modified, either with the nonlocal response of medium to extend also behind the interface, or with the medium response sharply truncated at the interface. For a weak spatial dispersion, different approaches to the problem are discussed in \cite{golubkov1995boundary}.
 
 Strong enough spatial dispersion can also allow the plane wave to refract into a superposition of two independent plane waves, which differ by their component of the wavevector perpendicular to the interface. The respective amplitudes of these components depend on the \textit{additional boundary conditions}\index{additional boundary conditions}\index{additional boundary conditions} \cite{agranovich2006spatial}.
@@ -671,20 +666,19 @@ Strong enough spatial dispersion can also allow the plane wave to refract into a
 
 \subsection{Phase, group, energy and signal velocities}
 \label{chap_vfvg}
-\paragraph{Signs of the phase and group velocities}%{{{ TODO
+\paragraph{Signs of the phase and group velocities}%{{{ 
 The negative refraction in media shown in Figs. \ref{fg_ifcnr}b,c and \ref{fg_ifcnrk}b,c was a result of the requirement for the group velocity $\vg$ to conserve its component perpendicular to the interface, and for the wave vector $\kk$ to conserve its projection onto the plane of interface. 
 
 It was assumed that the group velocity coincides with the energy or information propagation, and therefore that it should always be "positive", that is, it should propagate towards the interface in the first medium and outwards from it in the second one. In the following paragraphs, this assumption will be challenged for special cases of absorbing media, but it will be shown that in media with low losses it is correct and the term of \textit{negative phase}\index{velocity!negative phase velocity}  is used when it is opposite to the group velocity.
-
-Note that the phase velocity does not carry energy, it can be also higher than the speed of light in vacuum, as is typically obtained in inductive media.
+Note that since the phase velocity does not carry energy, it can be also higher than the speed of light in vacuum.
 
 %}}}
-\paragraph{Signs of the group and energy velocities}  % TODO %{{{
+\paragraph{Signs of the group and energy velocities}   %{{{
 %  \mdf{
 %  % TODO 0401 how can one tell apart negative refraction due to eps-mu and due to higher, purely nonlocal terms?
 %  *doubly resonant local media -> negative phase velocity, positive group velocity, above resonant frequencies - theoretically arbitrarily small losses\\
 %  *singly resonant local media -> positive phase velocity, negative group velocity, this happens near resonance so there are always high losses\\
-%  *			  nonlocal media -> weird things happen, todo\\
+%  *			  nonlocal media -> weird things happen,
 %  }
 In the discussion of wave refraction on an interface, it was assumed that the envelope (or modulation) of the wave approaches the interface in the first medium, then refracts and propagates away \textit{from} the interface in the second medium. The envelope propagates with the group velocity $\vg$ as defined by Eq. (\ref{eq_vg}). There is another quantity, the \textit{Poynting vector}\index{Poynting vector} $\mathbf{S} := \E\times\HH$, describing the direction and density of the \textit{power} carried by the optical wave \cite[p. 16]{klingshirn2007semiconductor}. 
 
@@ -1241,7 +1235,7 @@ In all cases of $\eeff(\omega)<1$, the effective refractive index $\Neff(\omega)
 
 %}}}
 \paragraph{Negative effective permeability and negative refractive index}  %{{{ ================== 
-The literature is somewhat ambiguous, but a thorough search shows that the term \textit{metamaterial}\index{metamaterial!history} (MM) was first used by Walser in 1999. Although apparently redundant to \textit{artificial dielectrics}, which was used for decades before,  the new term of \textit{metamaterial} can be viewed as more fortunate as it does not imply whether the structure is man-made or not, nor whether its effective parameters mimic a dielectric or, e.g., a metal.
+The literature is somewhat ambiguous, but a thorough search shows that the term \textit{metamaterial}\index{metamaterial!history} (MM) was first used by Walser in 1999. Although apparently redundant to \textit{artificial dielectrics}, which was used for decades before,  the new term of \textit{metamaterial} can be viewed as more fortunate as it does not imply whether the structure is man made or not, nor whether its effective parameters mimic a dielectric or, e.g., a metal.
 
 It remains unclear whether there was an objective cause, or a semantic bias from the term \textit{artificial dielectrics} only, that the periodic structures with magnetic effects received less attention than those with electric ones. Apparently the first theoretical study thereof  by Lewin \cite{lewin1947electrical} dates back to 1947, but the first realisations of split-ring resonator arrays and other magnetically resonant structures seem to have been published no earlier than in 1980s. Further details can be found in the Results chapter on pp. \pageref{negn_srr} and \pageref{negn_diel}.
 
@@ -1387,7 +1381,7 @@ This opposite-field domain is delimited by a surface where either the electric o
 
 The difference between the topologies of localized and delocalized pair of nodal planes can be interpreted as the boundary between MMs and PhCs. In practice, this well-defined difference manifests itself in the change of the phase along each unit cell, without any obvious impact on the propagation of energy. In more details this is demonstrated in the Chapter \ref{sect_diel_rods_el}  %TODO point to the diel array
 by numerical studies of the transition cases in dielectric rod arrays.
-%Under this criterion, the decision is frequency-dependent. All structures fall into the PhC class in the high-frequency limit.
+%Under this criterion, the decision is frequency dependent. All structures fall into the PhC class in the high-frequency limit.
 
 %}}}
 \paragraph{Less fortunate criteria} %{{{
